--- a/network_modeling/network_modeling.tex
+++ b/network_modeling/network_modeling.tex
@@ -83,6 +83,12 @@
 \def\bal{\begin{align}}
 \def\eal{\end{align}}
 
+% REFERENCES
+\newcommand{\Fig}[1]{Fig.~\ref{#1}}
+\newcommand{\eq}[1]{(\ref{#1})}
+\newcommand{\Tab}[1]{Tab.~\ref{#1}}
+\newcommand{\Sec}[1]{Sec.~\ref{#1}}
+
 \usepackage[acronym]{glossaries}
 
 \newacronym[plural=MCs,firstplural=Markov Chains (MCs)]{mc}{MC}{Markov Chain}
