--- a/network_modeling/network_modeling.tex
+++ b/network_modeling/network_modeling.tex
@@ -88,6 +88,7 @@
 \newcommand{\eq}[1]{(\ref{#1})}
 \newcommand{\Tab}[1]{Tab.~\ref{#1}}
 \newcommand{\Sec}[1]{Sec.~\ref{#1}}
+\newcommand{\indep}{\mathrel{\perp\mspace{-10mu}\perp}}
 
 \usepackage[acronym]{glossaries}
 
