--- a/network_modeling/chapter_2.tex
+++ b/network_modeling/chapter_2.tex
@@ -145,10 +145,12 @@ $$f_{ii} = \sum_{n=1}^\infty f_{ii}(n) $$
 \begin{definition}[Recurrent state]
 a state is recurrent if $f_{ii} = 1$
 \end{definition}
-
+	In other words we say that a state $i$ is recurrent if and only if, after the process starts from state $i$, the probability of its returning to state i after some finite length of time is one.
+	
 \begin{definition}[Transient state]
-a state is transient if  $f_{ii} < 1$
+	a state is transient if  $f_{ii} < 1$
 \end{definition}
+	In other words a state $i$ is said is transient if there exists a non-zero probability of never coming back to it.\footnote{like Angela. Please come back Angela, I love you.}
 
 \begin{definition}
 $M$ is the number of returns to state $i$
