--- a/network_modeling/network_modeling.tex
+++ b/network_modeling/network_modeling.tex
@@ -95,7 +95,7 @@
 
 \begin{document}
 \frontmatter
-
+ 
 \begin{titlepage} %------------------------------ TITLE PAGE
 \begin{center}
 
@@ -144,5 +144,6 @@
 \mainmatter
 \input{introduzione.tex}
 \input{chapter_2.tex}
+\input{chapter_poisson_processes.tex}
 
 \end{document}
