--- a/network_modeling/chapter_2.tex
+++ b/network_modeling/chapter_2.tex
@@ -150,7 +150,7 @@ a state is recurrent if $f_{ii} = 1$
 \begin{definition}[Transient state]
 	a state is transient if  $f_{ii} < 1$
 \end{definition}
-	In other words a state $i$ is said is transient if there exists a non-zero probability of never coming back to it.\footnote{like Angela. Please come back Angela, I love you.}
+	In other words a state $i$ is said to be transient if there exists a non-zero probability of never coming back to it.\footnote{like Angela. Please come back Angela, I love you.}
 
 \begin{definition}
 $M$ is the number of returns to state $i$
